fix: Remove default styles from progress bar on firefox

--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -49,6 +49,21 @@ progress[value]::-webkit-progress-value {
     -webkit-linear-gradient(left, #09c, #f44);
 }
 
+progress[value]::-moz-progress-bar {
+  background-image: -moz-linear-gradient(
+      135deg,
+      transparent 33%,
+      rgba(0, 0, 0, 0.1) 33%,
+      rgba(0, 0, 0, 0.1) 66%,
+      transparent 66%
+    ),
+    -moz-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25)),
+    -moz-linear-gradient(left, #09c, #f44);
+
+  /* border-radius: 20px; */
+  background-size: 35px 20px, 100% 100%, 100% 100%;
+}
+
 /* progress style credit: https://css-tricks.com/html5-progress-element */
 
 .currentScore {
